--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,10 +2,15 @@
   "name": "vim_ratings",
   "version": "0.5",
   "description": "Show additional rating metrics for vim plugins at vim.org",
+  "icons": {
+    "16": "img/icon_16.png",
+    "48": "img/icon_48.png",
+    "128": "img/icon_128.png"
+  },
   "content_scripts": [
     {
       "matches": ["http://www.vim.org/*"],
-      "js": ["jquery-1.6.1.min.js", "content.js"]
+      "js": ["js/jquery-1.6.1.min.js", "js/content.js"]
     }
   ]
 }
