--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,13 @@
 {
-  "name": "vim_ratings",
-  "version": "0.8",
-  "description": "Show and color-code average rating and rating per download for vim plugins at vim.org",
+  "name": "Vim Ratings",
+  "version": "0.9",
+  "description": "Adds color-code average rating and rating per download for vim plugins at vim.org",
   "icons": {
     "16": "img/icon_16.png",
     "48": "img/icon_48.png",
     "128": "img/icon_128.png"
   },
+  "background_page": "background.html",
   "content_scripts": [
     {
       "matches": ["http://www.vim.org/*"],
@@ -16,5 +17,6 @@
         "js/content.js"
       ]
     }
-  ]
+  ],
+  "options_page": "options.html"
 }
